Bug 319977: Minor string parser coding error in nsIconURI.cpp, patch by Alfred Kayser <alfredkayser@nl.ibm.com>, r=biesi, sr=bryner