modules/libpr0n/decoders/icon/nsIconURI.cpp
@@ -168,7 +168,7 @@ nsMozIconURI::GetSpec(nsACString &aSpec)
 
 // takes a string like ?size=32&contentType=text/html and returns a new string 
 // containing just the attribute value. i.e you could pass in this string with
-// an attribute name of size, this will return 32
+// an attribute name of 'size=', this will return 32
 // Assumption: attribute pairs in the string are separated by '&'.
 void extractAttributeValue(const char * searchString, const char * attributeName, char ** result)
 {
@@ -178,18 +178,17 @@ void extractAttributeValue(const char * searchString, const char * attributeName
 	if (searchString && attributeName)
 	{
 		// search the string for attributeName
-		PRUint32 attributeNameSize = PL_strlen(attributeName);
-		char * startOfAttribute = PL_strcasestr(searchString, attributeName);
+		PRUint32 attributeNameSize = strlen(attributeName);
+		const char * startOfAttribute = PL_strcasestr(searchString, attributeName);
 		if (startOfAttribute)
 		{
 			startOfAttribute += attributeNameSize; // skip over the attributeName
-			if (startOfAttribute) // is there something after the attribute name
+			if (*startOfAttribute) // is there something after the attribute name
 			{
-				char * endofAttribute = startOfAttribute ? PL_strchr(startOfAttribute, '&') : nsnull;
-				if (startOfAttribute && endofAttribute) // is there text after attribute value
-					attributeValue = PL_strndup(startOfAttribute, endofAttribute - startOfAttribute);
-				else // there is nothing left so eat up rest of line.
-					attributeValue = PL_strdup(startOfAttribute);
+				const char * endofAttribute = strchr(startOfAttribute, '&');
+				attributeValue = endofAttribute     // is there text after attribute value ?
+											 ? PL_strndup(startOfAttribute, endofAttribute - startOfAttribute)
+											 : PL_strdup(startOfAttribute);
 			} // if we have a attribute value
 		} // if we have a attribute name
 	} // if we got non-null search string and attribute name values
